--- a/src/shared/astro/SiteNavigation.astro
+++ b/src/shared/astro/SiteNavigation.astro
@@ -63,7 +63,14 @@ const navBars = [primary, secondary];
               const collection = item.collection;
               if (Component) {
                 return (
-                  <div class:list={["navigation-item", {"d0": item._bookshop_name !== "navigation/collection"}]} data-component={item._bookshop_name} data-collection={collection}>
+                  <div
+                    class:list={[
+                      "navigation-item",
+                      { d0: item._bookshop_name !== "navigation/collection" },
+                    ]}
+                    data-component={item._bookshop_name}
+                    data-collection={collection}
+                  >
                     <Component
                       {...item}
                       horizontal={false}
@@ -97,7 +104,8 @@ const navBars = [primary, secondary];
 
     function resizeHandler() {
       if (!navigation || !navItemsContainer) return;
-      const navBars = navItemsContainer.querySelectorAll<HTMLElement>('.navigation-items');
+      const navBars =
+        navItemsContainer.querySelectorAll<HTMLElement>(".navigation-items");
 
       let overflowDetected = false;
       let maxNeededWidth = 0;
@@ -105,7 +113,7 @@ const navBars = [primary, secondary];
       navBars.forEach((bar: HTMLElement) => {
         const originalJustify = bar.style.justifyContent;
         // Temporarily align items left to measure true scrollWidth
-        bar.style.justifyContent = 'flex-start';
+        bar.style.justifyContent = "flex-start";
 
         const rect = bar.getBoundingClientRect();
         if (bar.scrollWidth > bar.clientWidth) {
@@ -138,7 +146,7 @@ const navBars = [primary, secondary];
 <style lang="scss">
   nav {
     z-index: 999;
-    overflow: hidden;
+    /*overflow: hidden;*/
     font-size: var(--header-font-size);
     font-weight: var(--header-font-weight);
 
