--- a/src/shared/astro/Video.astro
+++ b/src/shared/astro/Video.astro
@@ -85,11 +85,7 @@ if (url.hostname.endsWith("vimeo.com")) {
 ---
 
 <div class:list={["video-wrapper", { background }]}>
-  {
-    embed && !ENV_BOOKSHOP_LIVE && (
-      <iframe src={embed} allowfullscreen allow="autoplay" />
-    )
-  }
+  {embed && <iframe src={embed} allowfullscreen allow="autoplay" />}
 </div>
 <style lang="scss">
   .video-wrapper.background {
