chore(page): add live editor debugging info to console

--- a/src/shared/astro/Page.astro
+++ b/src/shared/astro/Page.astro
@@ -36,6 +36,11 @@ Object.entries(componentOverrides).forEach(
     (components[bookshopName(path)] = obj.default),
 );
 
+if (ENV_BOOKSHOP_LIVE) {
+  console.info("[Page] Props:", Astro.props);
+  console.info("[Page] Content Blocks:", Object.keys(components));
+}
+
 const pagefind = status ? (status === "online" ? "" : undefined) : true;
 ---
 
