fix(page): explicitly pass content_blocks into bookshop:live context

--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -32,5 +32,5 @@ if (props?._schema && props._schema in renderers) {
 ---
 
 <Layout {...props}>
-  <Renderer {...props} bookshop:live />
+  <Renderer {...props} content_blocks={props.content_blocks} bookshop:live />
 </Layout>
