--- a/src/components/layout/columns/columns.astro
+++ b/src/components/layout/columns/columns.astro
@@ -208,7 +208,7 @@ let items = layoutBlocks.length ? layoutBlocks : contentBlocks;
     margin: 0;
   }
 
-  main > section.columns:first-of-type > .component-wrapper > .columns {
+  :where(main > section.columns:first-of-type > .component-wrapper > .columns) {
     > .first-in-column > section > .component-wrapper {
       margin-top: calc(var(--header-height) - var(--header-content-offset));
     }
