--- a/src/layouts/Section.astro
+++ b/src/layouts/Section.astro
@@ -162,19 +162,17 @@ const expando = classList.includes("expando") ? true : false;
 </section>
 
 <style lang="scss">
-  section {
+  :where(section) {
     position: relative;
-    /* height: max(var(--height), fit-content); */
-
     min-height: calc((var(--height) * 1vh) - var(--header-content-offset, 0px));
 
     --indent: var(--root-indent);
-    padding: calc(var(--indent) * var(--vertical-indent)) calc(var(--indent) + var(--page-max-width-padding));
+    padding: calc(var(--indent) * var(--vertical-indent))
+      calc(var(--indent) + var(--page-max-width-padding));
     z-index: 0;
     width: 100%;
 
     display: flex;
-    /* flex-direction: column; */
     align-items: stretch;
   }
 
@@ -184,8 +182,6 @@ const expando = classList.includes("expando") ? true : false;
 
   section.image {
     user-select: none;
-    /* min-height: var(--height); */
-    /* height: min(var(--height), 100%); */
   }
 
   :not(section.richtext) > * > .text-content {
@@ -208,7 +204,6 @@ const expando = classList.includes("expando") ? true : false;
 
   .component-wrapper {
     width: 100%;
-    /* height: 100%; */
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
