--- a/src/layouts/Section.astro
+++ b/src/layouts/Section.astro
@@ -176,6 +176,12 @@ const expando = classList.includes("expando") ? true : false;
     align-items: stretch;
   }
 
+  :global(main)
+    > section:first-of-type:not(.columns, .slider)
+    > .component-wrapper {
+    margin-top: calc(var(--header-height) - var(--header-content-offset));
+  }
+
   section.columns {
     padding: 0;
   }
@@ -425,10 +431,6 @@ const expando = classList.includes("expando") ? true : false;
 
   section.image figure > img {
     position: absolute;
-  }
-
-  main > section:first-of-type:not(.columns, .slider) > .component-wrapper {
-    margin-top: calc(var(--header-height) - var(--header-content-offset));
   }
 </style>
 
