--- a/src/components/map/map.astro
+++ b/src/components/map/map.astro
@@ -1,6 +1,7 @@
 ---
 import { default as Section, type Props as SectionProps } from "@layouts/Section.astro";
 import preferences from "@data/preferences.json";
+import { BUILDMODE } from "astro:env/server";
 
 export interface Props extends Partial<SectionProps> {
     location?: string;
@@ -18,7 +19,7 @@ const {
     zoom,
 } = Astro.props;
 
-const bs = ENV_BOOKSHOP_LIVE ?? false;
+const bs = BUILDMODE === "EDITOR";
 
 const apiKey =
     bs || import.meta.env.DEV
