--- a/src/shared/astro/Opengraph.astro
+++ b/src/shared/astro/Opengraph.astro
@@ -3,6 +3,7 @@ import _preferences from "@data/preferences.json";
 const preferences: Preferences = _preferences as unknown as Preferences;
 import { getImage } from "astro:assets";
 import { inferRemoteSize } from "@mws-astro/filesystem";
+import { BUILDMODE } from "astro:env/server";
 
 export interface Props {
   title?: string;
@@ -33,7 +34,7 @@ if (!thumbnail && preferences.general.default_sharing_image) {
   thumbnail = preferences.general.default_sharing_image;
 }
 
-if (thumbnail && !ENV_BOOKSHOP_LIVE) {
+if (thumbnail && BUILDMODE !== "EDITOR") {
   let imgSrc;
 
   if (typeof thumbnail == "string" && /^https?:\/\/.*/.test(thumbnail)) {
