--- a/src/layouts/Section.astro
+++ b/src/layouts/Section.astro
@@ -103,6 +103,7 @@ const expando = classList.includes("expando") ? true : false;
   ]}
   data-component={component}
   data-animation={animation}
+  {...Object.fromEntries(Object.entries(Astro.props).filter(([k,_]) => k.startsWith("data-")))}
   {id}
 >
   {
