--- a/src/shared/astro/Image.astro
+++ b/src/shared/astro/Image.astro
@@ -3,6 +3,7 @@ import { inferRemoteSize } from "@mws-astro/filesystem";
 import { Image as AstroImage } from "astro:assets";
 import _preferences from "@data/preferences.json";
 import { getImage } from "astro:assets";
+import { BUILDMODE } from "astro:env/server";
 const preferences = _preferences as unknown as Preferences;
 
 type CssAlignment = "top" | "bottom" | "center" | "left" | "right";
@@ -142,7 +143,7 @@ switch (imageSource) {
     }
 
     // Don't optimise remote images in the editor
-    if (ENV_BOOKSHOP_LIVE) {
+    if (BUILDMODE === "EDITOR") {
       src = image;
       break;
     }
