--- a/src/shared/astro/Page.astro
+++ b/src/shared/astro/Page.astro
@@ -1,5 +1,6 @@
 ---
 import { bookshopName } from "@mws-astro/util";
+import { BUILDMODE } from "astro:env/server";
 
 export interface Props {
   contentBlocks: any[];
@@ -37,7 +38,7 @@ Object.entries(componentOverrides).forEach(
     (components[bookshopName(path)] = obj.default),
 );
 
-if (ENV_BOOKSHOP_LIVE) {
+if (BUILDMODE === "EDITOR") {
   console.info("[Page] Props:", Astro.props);
   console.info("[Page] Content Blocks:", Object.keys(components));
 }
@@ -45,7 +46,7 @@ if (ENV_BOOKSHOP_LIVE) {
 const pagefind = status ? (status === "online" ? "" : undefined) : true;
 ---
 
-<main data-pagefind-body={pagefind} data-lightbox={lightbox}>
+<main data-pagefind-body={pagefind} data-lightbox={lightbox} data-editable="array" data-prop="content_blocks" data-id-key="_bookshop_name" data-component-key="_bookshop_name">
   {
     contentBlocks?.map((block: any, i: number) => {
       if ((block._bookshop_name as string).startsWith("_")) return;
@@ -56,6 +57,9 @@ const pagefind = status ? (status === "online" ? "" : undefined) : true;
             {...block}
             _meta={frontmatter}
             background_loading={i ? "lazy" : "eager"}
+            data-editable="array-item"
+            data-id={block._bookshop_name}
+            data-component={block._bookshop_name}
             key={String(i)}
           />
         );
