--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,11 +12,12 @@ import "sanitize.css";
 import "sanitize.css/forms.css";
 import "sanitize.css/typography.css";
 
-import { BUILDMODE } from "astro:env/server";
-if (BUILDMODE === "EDITOR") {
-  import("@mws-astro/register-components");
-}
+// import { BUILDMODE } from "astro:env/server";
+// if (BUILDMODE === "EDITOR") {
+//   import("@mws-astro/register-components");
+// }
 
+import "@mws-astro/register-components";
 
 export interface Props {
   title?: string;
