--- a/src/shared/astro/Markdown.astro
+++ b/src/shared/astro/Markdown.astro
@@ -14,7 +14,6 @@ import AsideImage from "@components/image/asideImage.astro";
 import Player from "@components/player/player.astro";
 import Accordion from "@components/accordion/accordion.astro";
 import Navigation from "@components/navigation/navigation.astro";
-import { BUILDMODE } from "astro:env/server";
 
 // Preprocess markdown to convert base64 encoded embeds to html, and force newlines after html elements
 const content = forceHTMLBlocks(replaceCmsEmbeds(Astro.props.content));
@@ -36,7 +35,7 @@ var substitutions = {
 
 var md: string | undefined;
 
-if (BUILDMODE === "EDITOR") {
+if (typeof window !== undefined) {
   marked.use(gfmHeadingId());
   md = await marked.parse(content);
 } else {
