--- a/src/components/layout/columns/columns.astro
+++ b/src/components/layout/columns/columns.astro
@@ -108,8 +108,10 @@ let items = layoutBlocks.length ? layoutBlocks : contentBlocks;
               }}
               class:list={["columns-item", block.cell]}
               data-editable="array-item"
+              data-id={block._bookshop_name}
+              data-component={block._bookshop_name}
             >
-              <Component {...block} key={(key || "") + "-" + i.toString()} data-id={block._bookshop_name} data-component={block._bookshop_name} />
+              <Component {...block} key={(key || "") + "-" + i.toString()} />
             </div>
           );
         }
